--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./dist/output.css" />
 </head>
 
-<body>
+<body class="cursor-default">
   <div class="bg-white">
     <!-- navBar Section  -->
     <div class=" w-full bg-[#ffffffcc] fixed top-0 border-b border-b-gray-100 z-50 backdrop-blur-sm">
@@ -57,7 +57,7 @@
           <p class="mb-5">Sanskrit Quotes for Your Space</p>
           <p class="mb-5">Calm, meaningful, timeless wall art.</p>
           <div
-            class="bg-[#f97316] h-12 px-9 py-6 rounded-4xl flex w-fit justify-center items-center text-white text-sm font-semibold">
+            class="bg-[#f97316] hover:bg-[#ea580c] transition-all duration-150 ease-in-out cursor-default h-12 px-9 py-6 rounded-4xl flex w-fit justify-center items-center text-white text-sm font-semibold">
             Explore Posters</div>
         </div>
         <div class="w-[50%] flex items-center justify-center">
@@ -105,7 +105,8 @@
             <!-- line1 -->
             <div class="flex gap-5 w-full">
               <!-- card1 -->
-              <div class="flex flex-col gap-7 overflow-hidden rounded-2xl w-full bg-white transition-all duration-300 ease-in-out hover:shadow-lg">
+              <div
+                class="flex flex-col gap-7 overflow-hidden rounded-2xl w-full bg-white transition-all duration-300 ease-in-out hover:shadow-lg">
                 <img src="Posters/poster.png" alt="poster1" class="object-cover h-[540px] object-center">
                 <div class="p-4">
                   <div class="mb-3">
@@ -121,8 +122,9 @@
                 </div>
               </div>
               <!-- card2 -->
-              
-              <div class="flex flex-col gap-7 overflow-hidden rounded-2xl w-full bg-white transition-all duration-300 ease-in-out hover:shadow-lg">
+
+              <div
+                class="flex flex-col gap-7 overflow-hidden rounded-2xl w-full bg-white transition-all duration-300 ease-in-out hover:shadow-lg">
                 <img src="Posters/धैर्यं सर्वत्र साधनम्.png" alt="poster1" class="object-cover h-[540px] object-center">
                 <div class="p-4">
                   <div class="mb-3">
@@ -138,7 +140,8 @@
                 </div>
               </div>
               <!-- card3 -->
-              <div class="flex flex-col gap-7 overflow-hidden rounded-2xl w-full bg-white transition-all duration-300 ease-in-out hover:shadow-lg">
+              <div
+                class="flex flex-col gap-7 overflow-hidden rounded-2xl w-full bg-white transition-all duration-300 ease-in-out hover:shadow-lg">
                 <img src="Posters/poster 4.png" alt="poster1" class="object-cover h-[540px] object-center">
                 <div class="p-4">
                   <div class="mb-3">
@@ -157,7 +160,8 @@
             <!-- line2 -->
             <div class="flex gap-5 w-full">
               <!-- card4 -->
-              <div class="flex flex-col gap-7 overflow-hidden rounded-2xl w-full bg-white transition-all duration-300 ease-in-out hover:shadow-lg">
+              <div
+                class="flex flex-col gap-7 overflow-hidden rounded-2xl w-full bg-white transition-all duration-300 ease-in-out hover:shadow-lg">
                 <img src="Posters/योगः कर्मसु कौशलम्.png" alt="poster1" class="object-cover h-[540px] object-center">
                 <div class="p-4">
                   <div class="mb-3">
@@ -173,7 +177,8 @@
                 </div>
               </div>
               <!-- card5 -->
-              <div class="flex flex-col gap-7 overflow-hidden rounded-2xl w-full bg-white transition-all duration-300 ease-in-out hover:shadow-lg">
+              <div
+                class="flex flex-col gap-7 overflow-hidden rounded-2xl w-full bg-white transition-all duration-300 ease-in-out hover:shadow-lg">
                 <img src="Posters/poster 3.png" alt="poster1" class="object-cover h-[540px] object-center">
                 <div class="p-4">
                   <div class="mb-3">
@@ -189,7 +194,8 @@
                 </div>
               </div>
               <!-- card6 -->
-              <div class="flex flex-col gap-7 overflow-hidden rounded-2xl w-full bg-white transition-all duration-300 ease-in-out hover:shadow-lg">
+              <div
+                class="flex flex-col gap-7 overflow-hidden rounded-2xl w-full bg-white transition-all duration-300 ease-in-out hover:shadow-lg">
                 <img src="Posters/विद्या ददाति विनयम्.png" alt="poster1" class="object-cover h-[540px] object-center">
                 <div class="p-4">
                   <div class="mb-3">
@@ -212,7 +218,7 @@
     <footer class="bg-white flex flex-col items-center p-12 my-0 mx-auto max-w-7xl">
       <div class="name flex items-center flex-col mb-8 w-full">
         <p class="tracking-wide text-[#111]">सूत्र</p>
-        <p class="text-[#111] tracking-[0.2em] text-[10px]">Sutra</p>
+        <p class="text-[#111] tracking-[0.2em] text-[10px] items-baseline">SUTRA</p>
       </div>
       <div class="text-center text-gray-600 text-sm w-full mb-8">
         Bringing timeless Sanskrit wisdom into modern spaces through minimal,<br> thoughtfully designed wall art.
@@ -225,19 +231,172 @@
         <a href="#" class="text-[#111] hover:text-[#f97316] text-sm transition-all duration-200 ease-in-out">Contact</a>
       </div>
       <div class="flex gap-4 pb-8 items-center justify-center w-full border-b border-b-gray-200">
-        <button class="border border-gray-200 cursor-pointer bg-white rounded-full h-9 w-9 flex items-center justify-center transition-all duration-200 ease-in-out hover:text-[#f97316] hover:border-[#f97316]">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram h-4 w-4" aria-hidden="true"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"></line></svg>
+        <button
+          class="border border-gray-200 cursor-pointer bg-white rounded-full h-9 w-9 flex items-center justify-center transition-all duration-200 ease-in-out hover:text-[#f97316] hover:border-[#f97316]">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+            class="lucide lucide-instagram h-4 w-4" aria-hidden="true">
+            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+            <line x1="17.5" x2="17.51" y1="6.5" y2="6.5"></line>
+          </svg>
         </button>
-        <button class="border border-gray-200 cursor-pointer bg-white rounded-full h-9 w-9 flex items-center justify-center transition-all duration-200 ease-in-out hover:text-[#f97316] hover:border-[#f97316]">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-facebook h-4 w-4" aria-hidden="true"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>
+        <button
+          class="border border-gray-200 cursor-pointer bg-white rounded-full h-9 w-9 flex items-center justify-center transition-all duration-200 ease-in-out hover:text-[#f97316] hover:border-[#f97316]">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+            class="lucide lucide-facebook h-4 w-4" aria-hidden="true">
+            <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+          </svg>
         </button>
-        <button class="border border-gray-200 cursor-pointer bg-white rounded-full h-9 w-9 flex items-center justify-center transition-all duration-200 ease-in-out hover:text-[#f97316] hover:border-[#f97316]">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-twitter h-4 w-4" aria-hidden="true"><path d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"></path></svg>
+        <button
+          class="border border-gray-200 cursor-pointer bg-white rounded-full h-9 w-9 flex items-center justify-center transition-all duration-200 ease-in-out hover:text-[#f97316] hover:border-[#f97316]">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+            class="lucide lucide-twitter h-4 w-4" aria-hidden="true">
+            <path
+              d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z">
+            </path>
+          </svg>
         </button>
       </div>
       <div class="text-gray-400 text-[12px] w-full text-center mt-8">© 2025 SUTRA. All rights reserved.</div>
     </footer>
   </div>
+  <!-- cart-backdrop -->
+  <div class="fixed top-0 left-0 w-full h-full z-1000 backdrop-brightness-55">
+    <div
+      class="minimizer absolute right-5 top-6 z-1001 hover:bg-gray-100 rounded-full flex justify-center items-center size-6 transition-colors duration-200 ease-in-out cursor-pointer">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class=" size-4">
+        <path d="M18 6 6 18"></path>
+        <path d="m6 6 12 12"></path>
+      </svg>
+    </div>
+    <!-- cart Section goes Here -->
+    <div class="absolute right-0 w-xl h-full bg-white">
+      <header class="flex justify-start items-center w-full gap-2 border-b border-b-gray-100 pt-6 px-6 pb-4">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+          class=" h-5 w-5 text-[#F97316]" aria-hidden="true">
+          <path d="M16 10a4 4 0 0 1-8 0"></path>
+          <path d="M3.103 6.034h17.794"></path>
+          <path
+            d="M3.4 5.467a2 2 0 0 0-.4 1.2V20a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6.667a2 2 0 0 0-.4-1.2l-2-2.667A2 2 0 0 0 17 2H7a2 2 0 0 0-1.6.8z">
+          </path>
+        </svg>
+        <p class="font-semibold">Shopping Cart</p>
+      </header>
+      <!-- cart item list -->
+      <!-- empty cart goes here -->
+      <div class="h-full flex flex-col items-center justify-center hidden">
+        <div class="h-23 w-23 rounded-full bg-gray-100 flex justify-center items-center mb-4">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+            class="w-12 h-12 text-gray-300" aria-hidden="true">
+            <path d="M16 10a4 4 0 0 1-8 0"></path>
+            <path d="M3.103 6.034h17.794"></path>
+            <path
+              d="M3.4 5.467a2 2 0 0 0-.4 1.2V20a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6.667a2 2 0 0 0-.4-1.2l-2-2.667A2 2 0 0 0 17 2H7a2 2 0 0 0-1.6.8z">
+            </path>
+          </svg>
+        </div>
+        <div class="flex flex-col items-center mb-4">
+          <h3 class="text-lg mb-2 text-[#111111] font-normal">Your cart is empty</h3>
+          <p class="text-sm text-gray-500">Add some beautiful Sanskrit posters to get started!</p>
+        </div>
+        <div
+          class="h-9 py-2 px-4 mt-4 border border-gray-200 text-sm rounded-md flex justify-center items-center font-semibold hover:bg-gray-200 transition-colors duration-200 ease-in-out cursor-default">
+          Continue Shopping</div>
+      </div>
+      <!-- empty cart ends here -->
+      <!-- cart item list -->
+      <div class="px-6">
+        <!-- <template> -->
+        <div
+          class="p-3 mt-3 border border-gray-100 rounded-xl hover:shadow-sm transition-shadow duration-200 ease-in-out mb-4">
+          <div class="flex gap-4 items-center h-24">
+            <div class="left h-24 w-20 rounded-lg overflow-hidden shrink-0">
+              <img class="h-full w-full block object-cover object-center" src="Posters/poster.png" alt="">
+            </div>
+            <div class="right flex flex-col w-full h-full">
+              <div class="mb-2 flex w-full h-full relative">
+                <div class="pr-8 w-full h-12">
+                  <h4 class="text-sm text-[#111]">Inner Peace</h4>
+                  <p class="text-xs text-gray-500">शांति</p>
+                </div>
+                <div id="deleteBtn"
+                  class="size-8 flex items-center justify-center absolute right-0 top-0 text-gray-500 hover:text-red-500 hover:bg-red-50 rounded-lg transition-colors duration-200 ease-in-out">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class=" h-4 w-4" aria-hidden="true">
+                    <path d="M10 11v6"></path>
+                    <path d="M14 11v6"></path>
+                    <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"></path>
+                    <path d="M3 6h18"></path>
+                    <path d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                  </svg>
+                </div>
+              </div>
+              <div class="flex w-full justify-between items-center">
+                <!-- quantity addition/subtraction buttons -->
+                <div class="border border-gray-200 rounded-lg w-fit flex items-center">
+                  <button
+                    class="size-7 flex items-center justify-center rounded-md hover:bg-gray-50 transition-colors duration-200 ease-in-out">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="lucide lucide-minus h-3 w-3" aria-hidden="true">
+                      <path d="M5 12h14"></path>
+                    </svg>
+                  </button>
+                  <span class="size-7 flex items-center justify-center">1</span>
+                  <button
+                    class="size-7 flex items-center justify-center rounded-md hover:bg-gray-50 transition-colors duration-200 ease-in-out">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="lucide lucide-plus h-3 w-3" aria-hidden="true">
+                      <path d="M5 12h14"></path>
+                      <path d="M12 5v14"></path>
+                    </svg>
+                  </button>
+                </div>
+                <!-- price Tag -->
+                <div class="text-sm">
+                  ₹129
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- </template> -->
+        <div class="sumUp absolute bottom-0 left-0 w-full h-auto py-4 px-6 bg-gray-50 border-t border-t-gray-100">
+          <div class="top mb-4">
+            <div class="subTotal flex items-center justify-between mb-2 h-5 text-sm text-[#111111]">
+              <div class="key text-gray-600">Subtotal</div>
+              <div class="value">₹109.32</div>
+            </div>
+            <div class="shipping flex items-center justify-between mb-2 h-5 text-sm text-[#111111]">
+              <div class="key text-gray-600">Shipping</div>
+              <div class="value">₹61</div>
+            </div>
+            <div class="gst flex items-center justify-between mb-2 h-5 text-sm text-[#111111]">
+              <div class="key text-gray-600">GST(18%)</div>
+              <div class="value">₹19.68</div>
+            </div>
+            <div class="total flex items-center justify-between mb-2 text-lg pt-3 border-t border-t-gray-300 mt-2 text-[#111111]">
+              <div class="key text-gray-600">Total</div>
+              <div class="value text-2xl">₹190</div>
+            </div>
+          </div>
+          <div class="bottom">
+            <button class="checkout h-12 w-full rounded-xl bg-[#f97316] text-white font-medium mb-4 hover:bg-[#ea580c] transition-colors duration-200 ease-in-out">
+              Proceed to Checkout
+            </button>
+            <p class="text-xs text-gray-500 text-center">Secure checkout • Free shipping on orders over ₹350</p>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 
 </html>
