--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
       </div>
     </div>
   </div>
-  <div class="fixed top-0 left-0 w-full h-full z-1000 backdrop-brightness-55 hidden">
+  <div class="fixed top-0 left-0 w-full h-full z-1000 backdrop-brightness-55 ">
     <!-- final Review and Payment Section -->
     <div
       class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-white p-6 max-h-[90vh] shadow-lg flex flex-col gap-4 w-full overflow-hidden max-w-2xl sm:max-w-lg rounded-xl">
