--- a/Sutra React Ecom-WebApp/frontend/index.html
+++ b/Sutra React Ecom-WebApp/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo_sutra.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Sutra – modern ecommerce store for quality lifestyle products." />
     <title>Sutra - Order Sanskrit Quote Posters here</title>
   </head>
   <body>
